// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's mergeUsers destination action: all fields 1`] = `
Object {
  "merge_updates": Array [
    Object {
      "identifier_to_keep": Object {
        "email": "keep@example.com",
        "prioritization": Array [
          "unidentified",
        ],
      },
      "identifier_to_merge": Object {
        "email": "merge@example.com",
        "prioritization": Array [
          "identified",
          "most_recently_updated",
        ],
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's mergeUsers destination action: required fields 1`] = `
Object {
  "merge_updates": Array [
    Object {
      "identifier_to_keep": Object {
        "external_id": "user-to-keep",
      },
      "identifier_to_merge": Object {
        "external_id": "user-to-merge",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's mergeUsers destination action: required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer 8$QYsxcxpjIn)Y",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;
